Fix layout issue with service categories

--- a/wp-content/themes/sesco-dss/sass/components/_card.scss
+++ b/wp-content/themes/sesco-dss/sass/components/_card.scss
@@ -26,6 +26,7 @@
     }
 
     &.card-lg {
+        max-width: none;
         border: 0.6rem solid $accent;
 
         .card-copy {
